# compact-binary-protocol

./: .gitignore  README.md  protocol.md  pyproject.toml
compact_binary_protocol/: __init__.py
compact_binary_protocol/data/: __init__.py  basic.py  constants.py  customer_id.py  device_status.py  environment.py  kv.py  location.py  multi.py  network_info.py  null.py  steps.py  versions.py
compact_binary_protocol/decoders/: __init__.py  data_reader.py  packet_decoder.py
compact_binary_protocol/encodings/: __init__.py  var_string.py
compact_binary_protocol/packets/: __init__.py  base.py  config.py  motion_start.py  motion_stop.py  power_on.py  telemetry.py  update.py
compact_binary_protocol/sensor_data/: __init__.py  location_data.py  sensor_data_basic.py  sensor_data_multi.py  sensor_data_null.py  sensor_data_steps.py
