[project]
name = "compact-binary-protocol"
version = "0.3.0"
description = "A library implementing a compact binary protocol"
readme = "README.md"
requires-python = ">=3.6"
license = {text = "MIT"}
authors = [
    {name = "Tartabit, LLC", email = "support@tartabit.com"}
]
dependencies = [
    "requests"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
urls = { "Homepage" = "https://github.com/tartabit/compact-binary-protocol" }

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"